fix: create shared class to add bottom spacing

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -507,6 +507,10 @@
       @apply hidden;
     }
   }
+
+  .extra-bottom-space {
+    height: calc(4rem + env(safe-area-inset-bottom));
+  }
 }
 
 .ptr--ptr {
